--- a/elements/code-graph.html
+++ b/elements/code-graph.html
@@ -1,9 +1,9 @@
 <link rel="import" href="../bower_components/polymer/polymer.html">
 <polymer-element name="code-graph">
     <template>
+        <link rel="stylesheet" href="../themes/dude.css">
         <style>
             #area {
-                background: #1d283a;
                 width: 100%;
                 height: 100%;
                 overflow: hidden;
@@ -13,45 +13,7 @@
                 width: 100%;
                 height: 100%;
             }
-            #svg #selection {
-                fill: rgba(255, 255, 255, 0.2);
-                stroke: rgba(255, 255, 255, 0.5);
-                stroke-width: 1px;
-            }
-            #svg .action rect {
-                fill: rgba(25, 35, 50, 0.8);
-                stroke: #ccc;
-                stroke-width: 1px;
-                cursor: move;
-            }
-            #svg .action:hover rect {
-                fill: rgba(15, 30, 40, 0.8);
-            }
-            #svg .action.selected rect {
-                stroke-width: 2px;
-            }
-            #svg .action .title {
-                fill: #ccc;
-                font-family: "Varela Round", sans-serif;
-                font-size: .9em;
-            }
-            #svg .action .text {
-                fill: #999;
-                font-family: "Varela Round", sans-serif;
-                font-size: .7em;
-            }
-            #svg .type-boolean { fill: #1abc9c; stroke: #1abc9c; }
-            #svg .type-number { fill: #2ecc71; stroke: #2ecc71; }
-            #svg .type-vec3 { fill: #3498db; stroke: #3498db; }
-            #svg .type-vec2 { fill: #2980b9; stroke: #2980b9; }
-            #svg .type-color { fill: #9b59b6; stroke: #9b59b6; }
-            #svg .type-list { fill: #f1c40f; stroke: #f1c40f; }
-            #svg .type-dictionary { fill: #e67e22; stroke: #e67e22; }
-            #svg .empty {
-                fill: transparent;
-                stroke-width: 1px;
-            }
-</style>
+        </style>
         <div id="area">
             <svg id="svg">
 
@@ -75,8 +37,9 @@
     <script src="../lib/nodes/action.js"></script>
     <script src="../lib/nodes/connection.js"></script>
     <script src="../lib/nodes/graph.js"></script>
-    <script src="../lib/renderer/index.js"></script>
+    <script src="../lib/renderer/elements/text-input.js"></script>
     <script src="../lib/renderer/zoom.js"></script>
+    <script src="../lib/renderer/index.js"></script>
     <script src="../lib/serialization/saver.js"></script>
     <script src="../lib/serialization/loader.js"></script>
     <script>
