Improve dom element handling.g

--- a/elements/code-graph.html
+++ b/elements/code-graph.html
@@ -37,7 +37,7 @@
     <script src="../lib/nodes/action.js"></script>
     <script src="../lib/nodes/connection.js"></script>
     <script src="../lib/nodes/graph.js"></script>
-    <script src="../lib/renderer/elements/text-input.js"></script>
+    <script src="../lib/renderer/utils.js"></script>
     <script src="../lib/renderer/zoom.js"></script>
     <script src="../lib/renderer/index.js"></script>
     <script src="../lib/serialization/saver.js"></script>
