Added new BBox type (include)

--- a/elements/code-graph.html
+++ b/elements/code-graph.html
@@ -26,6 +26,7 @@
     <!-- CodeGraph library -->
     <script src="../lib/index.js"></script>
     <script src="../lib/utils/vec2.js"></script>
+    <script src="../lib/utils/bbox.js"></script>
     <script src="../lib/utils/event-emitter.js"></script>
     <script src="../lib/utils/misc.js"></script>
     <script src="../lib/utils/graphError.js"></script>
