Add dynamic background grid.

--- a/elements/code-graph.html
+++ b/elements/code-graph.html
@@ -41,6 +41,7 @@
     <script src="../lib/renderer/utils.js"></script>
     <script src="../lib/renderer/pickers.js"></script>
     <script src="../lib/renderer/zoom.js"></script>
+    <script src="../lib/renderer/background-grid.js"></script>
     <script src="../lib/renderer/index.js"></script>
     <script src="../lib/serialization/saver.js"></script>
     <script src="../lib/serialization/loader.js"></script>
