--- a/elements/code-graph.html
+++ b/elements/code-graph.html
@@ -26,7 +26,7 @@
     <!-- CodeGraph library -->
     <script src="../lib/index.js"></script>
     <script src="../lib/utils/vec2.js"></script>
-    <script src="../lib/utils/bbox.js"></script>
+    <script src="../lib/utils/box2.js"></script>
     <script src="../lib/utils/event-emitter.js"></script>
     <script src="../lib/utils/misc.js"></script>
     <script src="../lib/utils/graph-error.js"></script>
@@ -38,11 +38,17 @@
     <script src="../lib/nodes/action.js"></script>
     <script src="../lib/nodes/connection.js"></script>
     <script src="../lib/nodes/graph.js"></script>
+    <script src="../lib/renderer/index.js"></script>
     <script src="../lib/renderer/utils.js"></script>
     <script src="../lib/renderer/pickers.js"></script>
     <script src="../lib/renderer/zoom.js"></script>
     <script src="../lib/renderer/background-grid.js"></script>
-    <script src="../lib/renderer/index.js"></script>
+    <script src="../lib/renderer/render-graph.js"></script>
+    <script src="../lib/renderer/render-container.js"></script>
+    <script src="../lib/renderer/render-group.js"></script>
+    <script src="../lib/renderer/render-action.js"></script>
+    <script src="../lib/renderer/render-point.js"></script>
+    <script src="../lib/renderer/render-connection.js"></script>
     <script src="../lib/serialization/saver.js"></script>
     <script src="../lib/serialization/loader.js"></script>
     <script>
@@ -105,13 +111,12 @@
                     },
                     "children": [
                         {"_type": "action", "_id": 10, "name": "shader", "position": [100, 300]},
-                        {"_type": "action", "_id": 1, "name": "rounded_rect", position: [100, 100]},
-                        {"_type": "group", "_id": 123, "name": "My Group", position: [400, 120], children: [
-                            {"_type": "action", "_id": 2, "name": "rounded_rect", position: [10, 0]}
+                        {"_type": "group", "_id": 123, "name": "My Group", "position": [450, 200], "size": [400, 300],  "children": [
+                            {"_type": "action", "_id": 3, "name": "rounded_rect", "position": [30, 130]}
                         ]}
                     ],
                     "connections": [
-                        {"from": {"action": 1, "point": "frag_color"}, "to": {"action": 2, "point": "color"}}
+                        {"from": {"action": 10, "point": "frag_color"}, "to": {"action": 3, "point": "color"}}
                     ]
                 });
                 renderer.render(graph);
