--- a/elements/code-graph.html
+++ b/elements/code-graph.html
@@ -95,7 +95,8 @@
                                 {"type": "vec3", "name": "position", "value": {"x": 0, "y": 0, "z": 0}},
                                 {"type": "vec2", "name": "uv", "value": {"x": 0, "y": 0}},
                                 {"type": "string", "name": "name", "value": "default.glsl"},
-                                {"type": "boolean", "name": "enabled", "value": true}
+                                {"type": "boolean", "name": "enabled", "value": true},
+                                {"type": "resource", "name": "image"}
                             ],
                             "outputs": [
                                 {"type": "color", "name": "frag_color"}
