Check if group is inside another one.

--- a/elements/code-graph.html
+++ b/elements/code-graph.html
@@ -111,6 +111,7 @@
                     },
                     "children": [
                         {"_type": "action", "_id": 10, "name": "shader", "position": [100, 300]},
+                        {"_type": "group", "_id": 324, "name": "The best group in the world", "position": [0, 0], "size": [400, 100], "children": []},
                         {"_type": "group", "_id": 123, "name": "My Group", "position": [450, 200], "size": [400, 300],  "children": [
                             {"_type": "action", "_id": 3, "name": "rounded_rect", "position": [30, 130]}
                         ]}
