Added correct drag and drop implementation

--- a/elements/code-graph.html
+++ b/elements/code-graph.html
@@ -45,6 +45,7 @@
     <script src="../lib/renderer/background-grid.js"></script>
     <script src="../lib/renderer/render-graph.js"></script>
     <script src="../lib/renderer/render-container.js"></script>
+    <script src="../lib/renderer/render-node.js"></script>
     <script src="../lib/renderer/render-group.js"></script>
     <script src="../lib/renderer/render-action.js"></script>
     <script src="../lib/renderer/render-point.js"></script>
@@ -119,6 +120,7 @@
                     },
                     "children": [
                         {"_type": "action", "_id": 10, "name": "shader", "position": [300, 200]},
+                        {"_type": "action", "_id": 120, "name": "mix", "position": [400, 300]},
                         {"_type": "group", "_id": 324, "name": "The best group in the world", "position": [0, 0], "size": [400, 100], "children": []},
                         {"_type": "group", "_id": 123, "name": "My Group", "position": [700, 200], "size": [400, 300],  "children": [
                             {"_type": "action", "_id": 3, "name": "rounded_rect", "position": [30, 130]}
