Create new theme and move style from js to css.

--- a/elements/code-graph.html
+++ b/elements/code-graph.html
@@ -1,7 +1,8 @@
 <link rel="import" href="../bower_components/polymer/polymer.html">
 <polymer-element name="code-graph">
     <template>
-        <link rel="stylesheet" href="../themes/dude.css">
+        <link rel="stylesheet" href="../themes/base.css">
+        <link rel="stylesheet" href="../themes/default.css">
         <style>
             #area {
                 width: 100%;
