Fixed shader inputs duplicated

--- a/elements/code-graph.html
+++ b/elements/code-graph.html
@@ -160,11 +160,7 @@
                                 {"type": "vec2", "name": "uv", "value": {"x": 0, "y": 0}},
                                 {"type": "string", "name": "name", "value": "default.glsl"},
                                 {"type": "boolean", "name": "enabled", "value": true},
-                                {"type": "resource", "name": "image"},
-                                {"type": "vec3", "name": "position"},
-                                {"type": "vec2", "name": "uv"},
-                                {"type": "string", "name": "name"},
-                                {"type": "boolean", "name": "enabled"}
+                                {"type": "resource", "name": "image"}
                             ],
                             "outputs": [
                                 {"type": "color", "name": "frag_color"}
