--- a/elements/code-graph.html
+++ b/elements/code-graph.html
@@ -70,7 +70,8 @@
                             "heading": 40
                         },
                         "point": {
-                            "height": 20
+                            "height": 20,
+                            "padding": 5
                         },
                         "background-grid": {
                             "pattern-size": 10,
@@ -93,11 +94,13 @@
                         "action": {
                             "min-width": 250,
                             "border-radius": 5,
-                            "padding": 10,
-                            "heading": 40
+                            "padding": 15,
+                            "heading": 40,
+                            "center-spacing": 20
                         },
                         "point": {
-                            "height": 20
+                            "height": 20,
+                            "padding": 5
                         },
                         "background-grid": {
                             "pattern-size": 10,
@@ -185,8 +188,7 @@
                         {"_type": "action", "_id": 211, "name": "name", "position": [20, 600]}
                     ],
                     "connections": [
-                        {"from": {"action": 10, "point": "frag_color"}, "to": {"action": 3, "point": "color"}},
-                        {"from": {"action": 211, "point": "value"}, "to": {"action": 10, "point": "name"}}
+                        {"from": {"action": 10, "point": "frag_color"}, "to": {"action": 3, "point": "color"}}
                     ]
                 });
                 graph.on("error", function (error) {
