--- a/elements/code-graph.html
+++ b/elements/code-graph.html
@@ -37,6 +37,8 @@
     <script src="../lib/nodes/group.js"></script>
     <script src="../lib/nodes/point.js"></script>
     <script src="../lib/nodes/model.js"></script>
+    <script src="../lib/nodes/getter.js"></script>
+    <script src="../lib/nodes/picker.js"></script>
     <script src="../lib/nodes/action.js"></script>
     <script src="../lib/nodes/connection.js"></script>
     <script src="../lib/nodes/graph.js"></script>
@@ -86,6 +88,7 @@
                 loader.load(graph, {
                     "models": {
                         "rounded_rect": {
+                            "type": "action",
                             "inputs": [
                                 {"type": "color", "name": "color", value: "#fff"},
                                 {"type": "number", "name": "aspect_ratio", value: 1.0},
@@ -98,6 +101,7 @@
                             ]
                         },
                         "blur": {
+                            "type": "action",
                             "inputs": [
                                 {"type": "number", "name": "diameter"},
                                 {"type": "vec2", "name": "resolution"}
@@ -105,10 +109,12 @@
                             "outputs": [{"type": "color", "name": "frag_color"}]
                         },
                         "black_and_white": {
+                            "type": "action",
                             "inputs": [],
                             "outputs": [{"type": "color", "name": "frag_color"}]
                         },
                         "mix": {
+                            "type": "action",
                             "inputs": [
                                 {"type": "color", "name": "x"},
                                 {"type": "color", "name": "y"},
@@ -117,10 +123,12 @@
                             "outputs": [{"type": "color", "name": "frag_color"}]
                         },
                         "output": {
+                            "type": "action",
                             "inputs": [{"type": "color", "name": "frag_color"}],
                             "outputs": []
                         },
                         "shader": {
+                            "type": "action",
                             "inputs": [
                                 {"type": "vec3", "name": "position", "value": {"x": 0, "y": 0, "z": 0}},
                                 {"type": "vec2", "name": "uv", "value": {"x": 0, "y": 0}},
@@ -132,10 +140,8 @@
                                 {"type": "color", "name": "frag_color"}
                             ]
                         },
-                        "name": {
-                            "type": "getter",
-                            "outputs": [{"type": "string", "name": "value"}]
-                        }
+                        "name": {"type": "getter", "value-type": "string"},
+                        "delta_value": {"type": "getter", "value-type": "number"}
                     },
                     "children": [
                         {"_type": "action", "_id": 1241, "name": "blur", "position": [200, 150]},
@@ -146,7 +152,8 @@
                         {"_type": "group", "_id": 123, "name": "My Group", "position": [700, 400], "size": [400, 300],  "children": [
                             {"_type": "action", "_id": 3, "name": "rounded_rect", "position": [30, 130]}
                         ]},
-                        {"_type": "action", "_id": 211, "name": "name", "position": [20, 600]}
+                        {"_type": "action", "_id": 211, "name": "name", "position": [20, 600]},
+                        {"_type": "action", "_id": 400, "name": "delta_value", "position": [400, 350]}
                     ],
                     "connections": [
                         {"from": {"action": 10, "point": "frag_color"}, "to": {"action": 3, "point": "color"}}
