Rename cg.Action in cg.Block.

--- a/elements/code-graph.html
+++ b/elements/code-graph.html
@@ -39,7 +39,7 @@
     <script src="../lib/nodes/model.js"></script>
     <script src="../lib/nodes/getter.js"></script>
     <script src="../lib/nodes/picker.js"></script>
-    <script src="../lib/nodes/action.js"></script>
+    <script src="../lib/nodes/block.js"></script>
     <script src="../lib/nodes/connection.js"></script>
     <script src="../lib/nodes/graph.js"></script>
     <script src="../lib/renderer/index.js"></script>
@@ -51,7 +51,7 @@
     <script src="../lib/renderer/render-graph.js"></script>
     <script src="../lib/renderer/render-container.js"></script>
     <script src="../lib/renderer/render-group.js"></script>
-    <script src="../lib/renderer/render-action.js"></script>
+    <script src="../lib/renderer/render-block.js"></script>
     <script src="../lib/renderer/render-point.js"></script>
     <script src="../lib/renderer/render-connection.js"></script>
     <script src="../lib/serialization/json-saver.js"></script>
@@ -144,19 +144,19 @@
                         "delta_value": {"type": "getter", "value-type": "number"}
                     },
                     "children": [
-                        {"_type": "action", "_id": 1241, "name": "blur", "position": [200, 150]},
-                        {"_type": "action", "_id": 1251, "name": "black_and_white", "position": [200, 300]},
-                        {"_type": "action", "_id": 120, "name": "mix", "position": [500, 200]},
-                        {"_type": "action", "_id": 10, "name": "shader", "position": [300, 500]},
+                        {"_type": "block", "_id": 1241, "name": "blur", "position": [200, 150]},
+                        {"_type": "block", "_id": 1251, "name": "black_and_white", "position": [200, 300]},
+                        {"_type": "block", "_id": 120, "name": "mix", "position": [500, 200]},
+                        {"_type": "block", "_id": 10, "name": "shader", "position": [300, 500]},
                         {"_type": "group", "_id": 324, "name": "The best group in the world", "position": [0, 0], "size": [200, 100], "children": []},
                         {"_type": "group", "_id": 123, "name": "My Group", "position": [700, 400], "size": [400, 300],  "children": [
-                            {"_type": "action", "_id": 3, "name": "rounded_rect", "position": [30, 130]}
+                            {"_type": "block", "_id": 3, "name": "rounded_rect", "position": [30, 130]}
                         ]},
-                        {"_type": "action", "_id": 211, "name": "name", "position": [20, 600]},
-                        {"_type": "action", "_id": 400, "name": "delta_value", "position": [400, 350]}
+                        {"_type": "block", "_id": 211, "name": "name", "position": [20, 600]},
+                        {"_type": "block", "_id": 400, "name": "delta_value", "position": [400, 350]}
                     ],
                     "connections": [
-                        {"from": {"action": 10, "point": "frag_color"}, "to": {"action": 3, "point": "color"}}
+                        {"from": {"block": 10, "point": "frag_color"}, "to": {"block": 3, "point": "color"}}
                     ]
                 });
                 graph.on("error", function (error) {
