Finish block refactore.

--- a/elements/code-graph.html
+++ b/elements/code-graph.html
@@ -37,8 +37,9 @@
     <script src="../lib/nodes/group.js"></script>
     <script src="../lib/nodes/point.js"></script>
     <script src="../lib/nodes/model.js"></script>
-    <script src="../lib/nodes/getter.js"></script>
-    <script src="../lib/nodes/picker.js"></script>
+    <script src="../lib/nodes/models/getter.js"></script>
+    <script src="../lib/nodes/models/picker.js"></script>
+    <script src="../lib/nodes/models/action.js"></script>
     <script src="../lib/nodes/block.js"></script>
     <script src="../lib/nodes/connection.js"></script>
     <script src="../lib/nodes/graph.js"></script>
@@ -66,7 +67,7 @@
                         "group": {
                             "border-radius": 5
                         },
-                        "action": {
+                        "block": {
                             "border-radius": 5
                         },
                         "background-grid": {
