--- a/elements/code-graph.html
+++ b/elements/code-graph.html
@@ -169,13 +169,7 @@
                     graph.addNode(action, graph);
                 });
                 jwerty.key('G', function () {
-                    var group = new cg.Group(prompt("_id"), prompt("name"), renderer._mousePosition.clone(), new cg.Vec2(300, 300));
-                    graph.addNode(group, graph);
-                    renderer.selectedNodes().forEach(function (node) {
-                        if (node.parent && node.parent instanceof cg.Graph) {
-                            group.addChild(node);
-                        }
-                    });
+                    renderer.createGroup(prompt("id"), prompt("name"));
                 });
                 jwerty.key('X', function () {
                     renderer.selectedNodes().forEach(function (node) {
