Added working zoom+translate, some weird slowdowns due to the pattern when the zoom != 1

--- a/elements/code-graph.html
+++ b/elements/code-graph.html
@@ -49,7 +49,7 @@
     <script src="../lib/renderer/utils.js"></script>
     <script src="../lib/renderer/pickers.js"></script>
     <script src="../lib/renderer/zoom.js"></script>
-    <script src="../lib/renderer/background-grid.js"></script>
+    <script src="../lib/renderer/grid.js"></script>
     <script src="../lib/renderer/render-graph.js"></script>
     <script src="../lib/renderer/render-container.js"></script>
     <script src="../lib/renderer/render-group.js"></script>
