Unified graph API, you must go through the graph instance to add/move/remove a node.

--- a/elements/code-graph.html
+++ b/elements/code-graph.html
@@ -195,7 +195,7 @@
                 });
                 jwerty.key('X', function () {
                     renderer.selectedNodes().forEach(function (node) {
-                        node.remove();
+                        graph.removeNode(node);
                     });
                 });
                 window.graph = graph;
